Swagger doc have information about category's methods
