# Handlers/CategoryHandler.go
@@ -25,6 +25,16 @@ type requestForUpdateCategory struct {
 	CategoryTitle string
 }
 
+// @Summary		Find category by ID
+// @Description Find category from DataBase by ID
+// @Tags		Categories
+// @Param		id path int true "Category ID"
+// @Produce		json
+// @Success		200 {object} Structs.Category
+// @Failure		500 {object} Structs.ApiError
+// @Failure		400 {object} Structs.ApiError
+// @Failure		404 {object} Structs.ApiError
+// @Router		/Category/{id} [get]
 func (h *CategoryHandler) FindThisCategory(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
@@ -43,6 +53,13 @@ func (h *CategoryHandler) FindThisCategory(c *gin.Context) {
 	c.JSON(http.StatusOK, category)
 }
 
+// @Summary		Find all categories
+// @Description Find all categories from DataBase by ID
+// @Tags		Categories
+// @Produce		json
+// @Success		200 {object} []Structs.Category
+// @Failure		500 {object} Structs.ApiError
+// @Router		/Category [get]
 func (h *CategoryHandler) FindAllCategories(c *gin.Context) {
 	categories, err := h.CategoryRepo.FindAllCategories(c)
 	if err != nil {
@@ -52,6 +69,15 @@ func (h *CategoryHandler) FindAllCategories(c *gin.Context) {
 	c.JSON(http.StatusOK, categories)
 }
 
+// @Summary		Create a category
+// @Description Create new category and put it to database
+// @Tags		Categories
+// @Accept		json
+// @Produce		json
+// @Success		200 {object} int "ID new category"
+// @Failure		500 {object} Structs.ApiError
+// @Failure		400 {object} Structs.ApiError
+// @Router		/Category [post]
 func (h *CategoryHandler) CreateCategory(c *gin.Context) {
 	var request requestForCreateCategory
 	err := c.BindJSON(&request)
@@ -68,6 +94,16 @@ func (h *CategoryHandler) CreateCategory(c *gin.Context) {
 	c.JSON(http.StatusOK, id)
 }
 
+// @Summary		Update category info
+// @Description Update category information from database
+// @Tags		Categories
+// @Param		id path int true "Category ID"
+// @Accept		json
+// @Produce		json
+// @Success		200
+// @Failure		500 {object} Structs.ApiError
+// @Failure		400 {object} Structs.ApiError
+// @Router		/Category/{id} [put]
 func (h *CategoryHandler) UpdateCategory(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
@@ -89,6 +125,15 @@ func (h *CategoryHandler) UpdateCategory(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
+// @Summary		Delete category
+// @Description Delete category from database
+// @Tags		Categories
+// @Param		id path int true "Category ID"
+// @Produce		json
+// @Success		200
+// @Failure		500 {object} Structs.ApiError
+// @Failure		400 {object} Structs.ApiError
+// @Router		/Category/{id} [delete]
 func (h *CategoryHandler) DeleteCategory(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
